--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Matthew Muir</title>
+    <title>Hundo: A Coding Project By Matthew Muir</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
 <!--Nav Section-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img style="margin-right: 12px;" src="/img/whitefavicon.png" class="d-inline-block align-text-top" height="30">APP NAME</a>
+        <a class="navbar-brand" href="#"><img style="margin-right: 12px;" src="/img/whitefavicon.png" class="d-inline-block align-text-top" height="30">Hundo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
                 </li>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                <a class="nav-link" target="_blank" href="https://github.com/Matthew-Muir/Hundo">Git Repo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https:\\matt-m.netlify.app">About</a>
@@ -50,7 +50,51 @@
 </nav>
 <!--Main Section-->
 <main class="flex-shrink-0">
-    <div class="container"></div>
+    <div class="container mt-5">
+
+        <div class="row row-cols-1 row-cols-lg-2">
+            <div class="col col-lg-4 border-end border-2">
+                <h1>Hundo: A Coding Project</h1>
+                <h4 class="lead">Text explaing what the app does!</h4>
+                <h2 class="mt-5 border-bottom border-2">Instructions! </h2>
+                <p>Press the start button!</p>
+            </div>
+            <div class="col col-lg-8">
+                <div>
+                    <h5>Enter Values</h5>
+                    <form class="row gy-2 gx-3">
+                        <div class="col">
+                            <input id="startValue" type="number" class="form-control" placeholder="Start Value"
+                                value=0 aria-label="Start Value">
+                        </div>
+                        <div class="col">
+                            <input id="endValue" type="number" class="form-control" placeholder="End Value"
+                            value=100 aria-label="End Value">
+                        </div>
+                        <div class="col-12 d-flex justify-content-end">
+                            <button id="btnSubmit" type="button" class="btn btn-dark btn-lg">Start!</button>
+                        </div>
+                    </form>
+                    <h2 class="mt-5 border-bottom border-2">Results</h2>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-sm">
+                            <tbody id="results">
+                                <!--results here-->
+                            </tbody>
+                        </table>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
+
+    </div>
 </main>
     <!--Footer Section-->
     <footer class="footer mt-auto py-3 sticky-footer bg-dark">
@@ -78,5 +122,8 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="js/site.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click",GetValues);
+    </script>
 </body>
 </html>
