--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Matthew Muir</title>
+    <title>Hundo: A Coding Project By Matthew Muir</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
 <!--Nav Section-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img style="margin-right: 12px;" src="/img/whitefavicon.png" class="d-inline-block align-text-top" height="30">APP NAME</a>
+        <a class="navbar-brand" href="#"><img style="margin-right: 12px;" src="/img/whitefavicon.png" class="d-inline-block align-text-top" height="30">Hundo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
                 </li>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                <a class="nav-link" target="_blank" href="https://github.com/Matthew-Muir/Hundo">Git Repo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https:\\matt-m.netlify.app">About</a>
@@ -54,7 +54,7 @@
 
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold 1h-1 mb-3">APP NAME: A Coding Project</h1>
+                    <h1 class="display-5 fw-bold 1h-1 mb-3">Hundo: A Coding Project</h1>
                     <h4 class="lead"> Live life one loop at a time. This project displays numbers
                         0-100 in javascript!<strong>BOLD.</strong>
                     </h4>
