--- a/app.html
+++ b/app.html
@@ -55,9 +55,9 @@
         <div class="row row-cols-1 row-cols-lg-2">
             <div class="col col-lg-4 border-end border-2">
                 <h1>Hundo: A Coding Project</h1>
-                <h4 class="lead">Text explaing what the app does!</h4>
+                <h4 class="lead">Outputs all value within min and max value with even numbers in <b>bold</b></h4>
                 <h2 class="mt-5 border-bottom border-2">Instructions! </h2>
-                <p>Press the start button!</p>
+                <p>Set the values and press start</p>
             </div>
             <div class="col col-lg-8">
                 <div>
